--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div id="container">
-  	<div id="graph"></div>
+  	<div id="bar"></div>
+    <div id="area"></div>
+    <div id="timeline"></div>
   </div>
 </body>
 </html>
