added snapping tooltip prototype

--- a/index.htm
+++ b/index.htm
@@ -12,10 +12,14 @@
     <div id="bar"></div>
     <div id="navigable">
       <div id="area"></div>
-      <div id="timeline"></div>    
+      <div id="timeline">
+        <div id="timelineTip" class="d3-tip d3-tip-custom n">Toto je popiska kurzora.</div>
+      </div>    
+
       <div class="pan left"><span>&lt;</span></div>
       <div class="pan right"/><span>&gt;</span></div>
     </div>
+
   </div>
 </body>
 </html>
