--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
   <title>zoomable c3-based graph</title>
   <script data-main="app/config" src="bower_components/requirejs/require.js"></script>
   <link href="bower_components/c3/c3.css" rel="stylesheet" type="text/css">
-  <link href="app/app.css" rel="stylesheet" type="text/css">
+  <link href="app/app.css?bust=8" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div id="container">
