restructured and configured the dist build

--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>zoomable c3-based graph</title>
+  <script type="text/javascript">
+    window.requireTestMode = true;
+  </script>
   <script data-main="app/config" src="bower_components/requirejs/require.js"></script>
   <link href="bower_components/c3/c3.css" rel="stylesheet" type="text/css">
   <link href="app/app.css?bust=8" rel="stylesheet" type="text/css">
