added initial version of filtering

--- a/index.htm
+++ b/index.htm
@@ -9,9 +9,11 @@
   <script data-main="app/config" src="bower_components/requirejs/require.js"></script>
   <link href="bower_components/c3/c3.css" rel="stylesheet" type="text/css">
   <link href="app/graph.css?bust=8" rel="stylesheet" type="text/css">
+  <link href="app/3rd-party/style.css?bust=8" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div id="controls"></div>
+  <div id="pie"></div>
   <div id="graph" class="znd-graph">
     <div class="bar"></div>
     <div class="navigable">
