extended layout handling

--- a/index.htm
+++ b/index.htm
@@ -10,16 +10,16 @@
   
   <script type="text/template" class="template" id="tpl-navig-desktop">
     <div class="navigation" id="navig-desktop">        
-        <div class="pan left"><span>&lt;</span></div>
-        <div class="pan right"><span>&gt;</span></div>
+        <div class="pan back"><span>&lt;</span></div>
+        <div class="pan forward"><span>&gt;</span></div>
     </div>
   </script>
 
 
   <script type="text/template" class="template" id="tpl-navig-mobile">
     <div class="navigation" id="navig-mobile">        
-        <div class="pan left"><span>&lt;</span></div>
-        <div class="pan right"><span>&gt;</span></div>
+        <div class="pan back"><span>&lt;</span></div>
+        <div class="pan forward"><span>&gt;</span></div>
     </div>
   </script>
 
