--- a/index.htm
+++ b/index.htm
@@ -8,9 +8,40 @@
     window.requireTestMode = true;
   </script>
   <script data-main="app/config" src="bower_components/requirejs/require.js"></script>
-  
+
+  <script type="text/template" class="template" id="tpl-controls">
+			<ul class="list">
+      <% _.each(model, function(item) {%>
+        <li data-series="<%= item.seriesName %>" class="company active"><!-- active hidden group -->
+      		<label style="color: white;">
+      			<input type="checkbox">
+            <b style="color: <%= item.color %>">
+              <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
+                <circle cx="6" cy="6" r="6" fill="<%= item.color %>"></circle>
+              </svg>
+              <%= item.seriesName %>
+              <i><%= item.aggregatedCount %></i>
+              <br/><%= item.percentage %>%
+            </b>
+            <%= item.sum %>
+      		</label>
+      	</li>
+      <% }); %>
+      <li class="desktop">
+    		<a href="#" id="break-group" class="icon">
+          Zobraziť všetky
+          <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="app/3rd-party/svg/sprite.svg#show-more"></use></svg>
+        </a>
+    		<a href="#" id="join-group" class="icon">
+          <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="app/3rd-party/svg/sprite.svg#show-less"></use></svg>
+          Zobraziť menej
+        </a>
+    	</li>
+    </ul>
+  </script>
+
   <script type="text/template" class="template" id="tpl-navig-desktop">
-    <div class="navigation" id="navig-desktop">        
+    <div class="navigation" id="navig-desktop">
         <div class="pan back"><span><svg>
             <use width="60%" height="60%" x="10" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="app/3rd-party/svg/sprite.svg#year-prev"></use>
           </svg></span></div>
@@ -22,7 +53,7 @@
 
 
   <script type="text/template" class="template" id="tpl-navig-mobile">
-    <div class="navigation" id="navig-mobile">        
+    <div class="navigation" id="navig-mobile">
     <div id="years" class="block">
       <div class="block back">
         <% if (prevYear) { %><a class="icon">
@@ -41,7 +72,7 @@
           </svg>
         </a><% } %>
       </div>
-    </div>    
+    </div>
     </div>
   </script>
 
@@ -49,7 +80,7 @@
     <ul>
       <% _.each(model, function(itemData) {%>
       <li>
-        <span class="bullet" style="color: <%= itemData.color %>"><span>&#8226;</span></span>        
+        <span class="bullet" style="color: <%= itemData.color %>"><span>&#8226;</span></span>
         <em class="company"><%= itemData.company %></em>
         <span class="amount"><%= itemData.amount %></span>
       </li>
@@ -70,7 +101,7 @@
       <div class="area"></div>
       <div class="timeline">
         <div class="d3-tip d3-tip-custom n">Toto je popiska kurzora.</div>
-      </div>    
+      </div>
     </div>
 
   </div>
