style and layout fixes

--- a/index.htm
+++ b/index.htm
@@ -94,16 +94,20 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div id="pie"></div>
-  <div id="graph" class="znd-graph">
-    <div class="bar"></div>
-    <div class="navigable">
-      <div class="area"></div>
-      <div class="timeline">
-        <div class="d3-tip d3-tip-custom n">Toto je popiska kurzora.</div>
+  <div style="padding: 20px">
+    <div id="pie"></div>
+    <div id="graph" class="znd-graph">
+      <h3 class="bar-title heading">Celkový objem tendrov</h3>
+      <div class="bar"></div>
+      <h3 class="timeline-title heading">Účinkovanie osoby vo firmách v jednotlivých rokoch</h3>
+      <div class="navigable">
+        <div class="area"></div>
+        <div class="timeline">
+          <div class="d3-tip d3-tip-custom n"></div>
+        </div>
       </div>
-    </div>
 
+    </div>
   </div>
 </body>
 </html>
