--- a/index.htm
+++ b/index.htm
@@ -26,12 +26,12 @@
       <% }); %>
       <li class="desktop">
     		<a href="#" id="break-group" class="icon">
-          Zobraziť všetky
+          <%= more %>
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="app/3rd-party/svg/sprite.svg#show-more"></use></svg>
         </a>
     		<a href="#" id="join-group" class="icon">
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="app/3rd-party/svg/sprite.svg#show-less"></use></svg>
-          Zobraziť menej
+          <%= less %>
         </a>
     	</li>
     </ul>
